[package]
name = "input-handle"
version = "1.0.4"
authors = ["Luke Wilkinson <wilkinsonluke@proton.me>"]
edition = "2021"
license = "GPL-3.0"
keywords = ["input", "error", "validation"]
description = "Simple library to handle input of any type"
repository = "https://github.com/TT1882/import-handler"
[dependencies]
